--- a/examples/1.html
+++ b/examples/1.html
@@ -2,7 +2,7 @@
     <html>
     <body></body>
     <script>
-    Android.loadurl('javascript:v = document.getElementById("text_id").value; console.info("hello " + v + " =="); document.location="http://www.baidu.com/s?wd=" + v;');
+    Android.loadurl('javascript:v = document.getElementById("text_id").value; console.info("hello " + v + " =="); '); 
     </script>
 
     </html>
